Bug #26450 Node recovery following (stop+delete+restart) can lead to inconsistent data
Submitted: 16 Feb 2007 16:50 Modified: 5 Nov 2007 23:21
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:5.1

[16 Feb 2007 16:50] Jonas Oreland
Description:
2 node cluster
- create table
- load table 10' rows
- restart cluster
- stop 1 node
- delete all rows
- restart alive node partial using --no-wait-nodes
- restart alive node partial using --no-wait-nodes
- start first node

here data is no ok...

How to repeat:
see above

Suggested fix:
[20 Feb 2007 20:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/20218

ChangeSet@1.2416, 2007-02-20 20:33:53+01:00, jonas@eel.(none) +1 -0
  ndb -
    write testcase for bug#26450...
    no solution however...
[23 Oct 2007 11:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/36107

ChangeSet@1.2581, 2007-10-23 11:24:34+02:00, jonas@perch.ndb.mysql.com +18 -0
  ndb - bug#26450
    partial backport from 6.2 + add fix of bug
[26 Oct 2007 7:39] Jonas Oreland
pushed to 51-ndb, telco-6.2, telco-6.3 & 51-telco
[5 Nov 2007 14:53] Bugs System
Pushed into 6.0.4-alpha
[5 Nov 2007 14:57] Bugs System
Pushed into 5.1.23-rc
[5 Nov 2007 23:21] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.22-ndb-6.28, 5.1.22-ndb-6.3.6, 5.1.23, and 6.0.4 changelogs.
Closed.