ndb - bug#26450   partial backport from 6.2 + add fix of bug

storage/ndb/include/kernel/GlobalSignalNumbers.h:
  add prep_copy_frag
storage/ndb/include/kernel/signaldata/AccScan.hpp:
  add new argument specifying which page to scan to
storage/ndb/include/kernel/signaldata/CopyFrag.hpp:
  add new argument specifying which page to scan to
storage/ndb/include/ndb_version.h.in:
  add versioning checks for prep_copy_frag
storage/ndb/src/common/debugger/signaldata/SignalNames.cpp:
  add prep_copy_frag
storage/ndb/src/kernel/blocks/ERROR_codes.txt:
  new error codes
storage/ndb/src/kernel/blocks/dbdih/Dbdih.hpp:
  add new to-step
storage/ndb/src/kernel/blocks/dbdih/DbdihInit.cpp:
  add new to-step
storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp:
  add new to-step
storage/ndb/src/kernel/blocks/dblqh/Dblqh.hpp:
  add new to-step
storage/ndb/src/kernel/blocks/dblqh/DblqhInit.cpp:
  add new to-step
storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  add new to-step
storage/ndb/src/kernel/blocks/dbtup/Dbtup.hpp:
  add new argument specifying which page to scan to
storage/ndb/src/kernel/blocks/dbtup/DbtupMeta.cpp:
  add utility to get max page used by fragment
storage/ndb/src/kernel/blocks/dbtup/DbtupScan.cpp:
  add NR scan to > frag.noOfPages
storage/ndb/test/ndbapi/testSystemRestart.cpp:
  add testcase
storage/ndb/test/run-test/daily-basic-tests.txt:
  add testcase
storage/ndb/test/src/NdbRestarts.cpp:
  add testcase